--- a/android-whereyougo/res/values/strings.xml
+++ b/android-whereyougo/res/values/strings.xml
@@ -76,4 +76,5 @@
     <string name="you_see">You see</string>
     <string name="compass">Compass</string>
     <string name="navigate">Navigate</string>
+    <string name="positioning">Positioning</string>
 </resources>
