fix #44: change button text from GPS to Save

--- a/android-whereyougo/res/values/strings.xml
+++ b/android-whereyougo/res/values/strings.xml
@@ -86,4 +86,5 @@
     <string name="ctx_menu_delete_log_file">Delete log file</string>
     <string name="ctx_menu_send_log_file">Send log file</string> 
     <string name="err_none">OK</string>  
+    <string name="save">Save</string>
 </resources>
