fix #60: Show name of destination at GuidanceActivity

--- a/android-whereyougo/res/values/strings.xml
+++ b/android-whereyougo/res/values/strings.xml
@@ -88,4 +88,5 @@
     <string name="err_none">OK</string>  
     <string name="save">Save</string>
     <string name="guidance_zone_entered">Zone entered</string>
+    <string name="stop_navigate">Stop Guidance</string>
 </resources>
