--- a/android-whereyougo/res/values/strings.xml
+++ b/android-whereyougo/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="double_hk_back_exit_app">Press BACK twice to exit Yaawp</string>
     <string name="double_hk_back_exit_guidance">Press BACK twice to stop navigation</string>
     <string name="double_hk_back_exit_game">Press BACK twice to leave the game</string>
+    <string name="guidance_destination">Destination</string>
 </resources>
